<resources>

    <!--Splash name-->
    <string name="splash_name">Autotransportes \nScorpio</string>

    <!--Strings for new employee-->

    <string name="app_name">Scorpio</string>
    <string name="employee_key">ID</string>
    <string name="employee_season">Temporada</string>
    <string name="employee_full_name">Nombre(s)</string>
    <string name="employee_first_name">Apellido Paterno</string>
    <string name="employee_last_name">Apellido Materno</string>

    <string name="employee_origin">Origen</string>
    <string name="employee_date_birth">F. Nac</string>
    <string name="employee_leverage">Enganche</string>
    <string name="employee_activity">Actividad</string>
    <string name="employee_travel">Viaje</string>
    <string name="employee_bus">Camion</string>
    <string name="employee_curp">CURP o \n CLABE</string>
    <string name="employee_departure_date">Fecha Salida</string>

    <string name="employee_departure">Salida</string>
    <string name="employee_arrive">Llegada</string>
    <string name="employee_start">Inicio</string>
    <string name="employee_end">Fin</string>

    <!--String for display employees-->
    <string name="title_home">Menu principal</string>
    <string name="title_supervisor_salidas">Consultar Salidas</string>
    <string name="title_generar_credenciales">Generar credenciales</string>
    <string name="subtitle_new_worker_trip">Nuevo Trabajador a camion</string>
    <string name="subtitle_new_worker_alone">Nuevo Trabajador solo</string>
    <string name="subtitle_update_worker">Actualizar Info:</string>
    <string name="subtitle_listado_empleados_campo">Trabajadores Campo:</string>
    <string name="subtitle_listado_empleados_impresion">Imprimir credenciales</string>
    <string name="title_new_worker">Altas a Salida</string>
    <string name="title_new_worker_solo">Altas Solos</string>
    <string name="title_check_list_to_one">Pase de lista</string>
    <string name="title_quit_employee">Baja de trabajador</string>
    <string name="title_check_list_to_one_manual">Pase de lista Manual</string>
    <string name="input_bus_number">Ingresa el número del camión</string>
    <string name="employees_number_trip">Camion</string>
    <string name="empty_list_workers">La esta lista vacía, para agregar un trabajador, pulse el botón NUEVO en la parte superior.</string>
    <string name="empty_workers_selected">No hay elementos seleccionados</string>
    <string name="press_again_to_exit">Presione nuevamente para Salir</string>
    <string name="exit">Salir</string>
    <string name="continue_workers_register">Seguir asignando</string>
    <string name="continue_adding_workers">Seguir agregando</string>
    <string name="title_exit_dialog">¿Realmente desea Salir?</string>
    <string name="message_exit_dialog">Aun hay elementos que no se han asignado.</string>
    <string name="message_exit_dialog_credentials">Se perdera la lista de seleccionados.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_black_list_user_found">El siguiente empleado se ha encontrado \nen la lista negra</string>
    <string name="check_list_put_user_number">Número de trabajador</string>
    <string name="check_list_total_check_list">Total de pase de lista:</string>
    <string name="check_list_total_checked_users_peer_day">Total de asistencias:</string>
    <string name="check_list_pick_date">Fecha de asistencia</string>
    <string name="credenciales_viajes">Viajes</string>
    <string name="checl_list_select">Selecciona una fecha</string>
    <string name="check_list_insert_row_manual">Pasar Lista</string>

    <string name="loans_id">ID Trabajador</string>
    <string name="loans_date">Fecha de aplicación</string>
    <string name="loans_import">Cantidad $</string>
    <string name="loans_insert">Registrar</string>

    <string name="quit_id_trabajador">Número de trabajador</string>
    <string name="quit_choose_reason">Selecciona el motivo de baja</string>
    <string name="quit_notas">Notas</string>

    <string name="digits">ABCDEFGHIJKLMNÑOPQRSTUVWXYZ0123456789</string>

    <string name="black_list_full_name">Nombre</string>
    <string name="black_list_curp">CURP</string>
    <string name="black_list_fecha_nac">Fecha de Nac.</string>
    <string name="black_list_lugar_nac">Lugar de Nac.</string>
    <string name="black_list_motivo">Motivo</string>
    <string name="black_list_observaciones">Observaciones</string>
    <string name="title_activity_search_employees">ActivitySearchEmployees</string>
    <string name="hint_search_by">Buscar por ID, nombre o apellidos...</string>

    <string name="empty_list_employees_selected">Para agregar, presiona sobre un elemento de la lista \no \nmediante el buscador por nombre o ID.</string>

</resources>
