<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loans_date"
        android:textSize="@dimen/text_size_16dp"
        android:textColor="@color/text_color_dark"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_12dp"
        android:visibility="visible"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edt_loan_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:inputType="number"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_6dp"
        android:clickable="true"
        android:editable="false"
        android:textSize="20dp"
        android:cursorVisible="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loans_id"
        android:textSize="@dimen/text_size_16dp"
        android:textColor="@color/text_color_dark"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_6dp"
        android:visibility="visible"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edt_loan_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:inputType="number"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:padding="10dp"
        android:layout_marginBottom="@dimen/margin_8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loans_import"
        android:textSize="@dimen/text_size_16dp"
        android:textColor="@color/text_color_dark"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_6dp"
        android:visibility="visible"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edt_loan_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="4"
        android:inputType="number"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:padding="10dp"
        android:layout_marginBottom="@dimen/margin_6dp" />

    <Button
        android:id="@+id/btn_insert_loan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loans_insert"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/margin_6dp"
        android:layout_marginBottom="@dimen/margin_6dp"
        android:paddingLeft="@dimen/margin_6dp"
        android:paddingRight="@dimen/margin_6dp"
        android:layout_gravity="center"
        android:background="@color/red" />

</LinearLayout>
