<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/margin_22dp"
    android:paddingBottom="@dimen/margin_16dp"
    android:paddingLeft="@dimen/margin_16dp"
    android:paddingRight="@dimen/margin_16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_list_total_check_list"
            android:textSize="@dimen/text_size_16dp"
            android:textColor="@color/text_color_dark"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_total_check_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_22dp"
            android:textColor="@color/text_color_dark"
            android:textStyle="bold"
            android:text="0"
            android:paddingLeft="@dimen/margin_20dp"
            android:gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_list_total_checked_users_peer_day"
            android:textSize="@dimen/text_size_16dp"
            android:textColor="@color/text_color_dark"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_total_assistence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_22dp"
            android:textColor="@color/text_color_dark"
            android:textStyle="bold"
            android:text="0"
            android:paddingLeft="@dimen/margin_20dp"
            android:gravity="center_horizontal"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_list_put_user_number"
        android:textSize="@dimen/text_size_16dp"
        android:textColor="@color/text_color_dark"
        android:textStyle="bold"
        android:paddingTop="@dimen/margin_22dp"
        android:gravity="center_horizontal"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edt_id_empleado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:inputType="number"
        android:gravity="center_horizontal"
        android:textSize="50dp"
        android:padding="10dp"
        android:layout_marginBottom="@dimen/margin_8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_list_pick_date"
        android:textSize="@dimen/text_size_16dp"
        android:textColor="@color/text_color_dark"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_12dp"
        android:visibility="gone"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edt_check_list_single_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:inputType="number"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_select_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checl_list_select"
        android:textSize="@dimen/text_size_14dp"
        android:background="@color/red"
        android:paddingLeft="@dimen/margin_8dp"
        android:paddingRight="@dimen/margin_8dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

</LinearLayout>
